fix: remove relative spacing

--- a/app/timeline/page.module.scss
+++ b/app/timeline/page.module.scss
@@ -1,5 +1,5 @@
 @use 'styles/utilities.module.scss' as utilities;
 
 .gap {
-    gap: calc(35vh - (utilities.$line-height * 4));
+    gap: calc(utilities.$line-height * 9);
 }
